--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@stitches/react": "^1.2.8",
+    "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "keen-slider": "^6.8.5",
